Add Transfer UI, Copy Changes, Policy Pages (#7)
* Create sharing landing module

* Update index.html

* Update send.component.html

* Update send.component.scss

* Update buttons

* Update benefit-panel.component.html

* CSS& Copy Updates

* Remove background image

* Add Policy Pages

* Update file-row.component.ts

* Update file-row.component.scss

* Update file-row.component.scss

* Copy updates

--- a/src/app/modules/send/pages/send/send.component.html
+++ b/src/app/modules/send/pages/send/send.component.html
@@ -5,11 +5,11 @@
       <nz-upload nzType="drag" [nzMultiple]="false" [nzFileList]="fileList" [nzAction]="uploadUrl" (nzChange)="handleChange($event)" nzShowUploadList="false">
         <div class="upload-wrapper">
           <span>Drag and Drop your file or</span>
-          <button nz-button nzType="default">Browse</button>
+          <button nz-button nzType="primary">Browse</button>
         </div>
       </nz-upload>
     </div>
-    <nz-alert nzType="info" nzMessage="Login to upload multiple files at once and save your files to share later!"
+    <nz-alert nzType="info" nzMessage="Login to store your files for longer, your files will be deleted after 24 hours if you're not logged in."
       nzShowIcon></nz-alert>
   </div>
 </nz-content>
