--- a/src/app/shared/components/file-row/file-row.component.html
+++ b/src/app/shared/components/file-row/file-row.component.html
@@ -16,7 +16,7 @@
       <ul nz-menu nzSelectable>
         <li nz-menu-item (click)="launchCodeModal()">View Code</li>
         <li nz-menu-item (click)="launchShareModal()">Share</li>
-        <li nz-menu-item (click)="showDeleteConfirm()">Delete</li>
+        <!-- <li nz-menu-item (click)="showDeleteConfirm()">Delete</li> -->
       </ul>
     </nz-dropdown-menu>
   </div>
